<resources>
    <string name="app_name">Collaborative Scouting Project</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Scout Not Logged In</string>
    <string name="nav_header_subtitle">Tap here to log in</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="pit_scout">Pit Scout</string>
    <string name="match_scout">Match Scout</string>
    <string name="log_out">Log Out</string>
    <string name="scout">Scout</string>
    <string name="tournament">Tournament</string>
    <string name="login">Login</string>
    <string name="rocket_ship_thumbnail">Rocket Ship Thumbnail</string>
    <string name="cargo_ship_thumbnail">Cargo Ship Thumbnail</string>
    <string name="rocket_closeup">Rocket Closeup</string>
    <string name="cargo">Cargo</string>
    <string name="success">Success</string>
    <string name="high">High</string>
    <string name="middle">Middle</string>
    <string name="low">Low</string>
    <string name="back">Back</string>
    <string name="hatches">Hatches</string>
    <string name="front">Front</string>
    <string name="side">Side</string>
    <string name="attempts">Attempts:</string>
    <string name="foul">Foul</string>
    <string name="crosses_midline">Crosses Midline</string>
    <string name="defence">Defence</string>
    <string name="loses_start_object">Loses Start Object</string>
    <string name="leaves_hab">Leaves HAB</string>
    <string name="comments">Comments</string>
    <string name="clear">Clear</string>
    <string name="export">Export</string>
    <string name="pit_scouting">Pit Scouting</string>
    <string name="match_scouting">Match Scouting</string>
    <string name="qr_aggregator">QR Aggregator</string>
    <string name="hatch">Hatch</string>
    <string name="cargo_ship">CARGO SHIP</string>
    <string name="rocket">ROCKET</string>
</resources>
