<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="horizontal">

        <ImageView
            android:src="@drawable/di_logo"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:layout_weight="1"/>
        <ImageView
            android:src="@drawable/projectb_logo"
            android:layout_width="0dp"
            android:layout_height="175dp"
            android:layout_weight="1"/>
    </LinearLayout>

    <!-- Layout if not logged in -->
    <LinearLayout
        android:id="@+id/welcome_notLoggedIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin">

        <TextView
            android:text="@string/scout"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/welcome_scout_login_editText"
            android:hint="Last_First"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />

        <TextView
            android:text="@string/tournament"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <EditText
            android:id="@+id/welcome_tournament_login_editText"
            android:hint="Event Code"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:maxLines="1" />

        <Button
            android:id="@+id/welcome_login_button"
            android:text="@string/login"
            android:layout_gravity="center"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>


    <!-- Layout if logged in -->
    <LinearLayout
        android:id="@+id/welcome_loggedIn"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/activity_vertical_margin"
        android:orientation="vertical"
        android:visibility="gone"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="30dp">

        <TextView
            android:id="@+id/welcome_welcomeBack_textView"
            android:text="Welcome Back, Scout!"
            android:textSize="26sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <TextView
            android:layout_gravity="center"
            android:textSize="18sp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:text="If this isn't you, please log out."
            android:layout_width="wrap_content"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/welcome_logout_button"
            android:text="@string/log_out"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginBottom="40dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"/>

        <Button
            android:id="@+id/welcome_pit_scouting_button"
            android:text="@string/pit_scouting"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/welcome_match_scouting_button"
            android:text="@string/match_scouting"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/welcome_qr_aggregator_button"
            android:text="@string/qr_aggregator"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <Button
            android:id="@+id/welcome_pull_from_tba"
            android:text="Pull from TBA"
            android:onClick="onClick"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />
    </LinearLayout>

</LinearLayout>
</ScrollView>