<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/base_scout_cargoship_section_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:text="@string/cargo_ship"
        android:textAlignment="center"
        android:textColor="@android:color/white"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <include
                    android:id="@+id/base_scout_cargoship_cargo_top_attempts_square"
                    layout="@layout/attempt_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <include
                    android:id="@+id/base_scout_cargoship_cargo_top_attempts"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include
                    android:id="@+id/base_scout_cargoship_cargo_top_successes_square"
                    layout="@layout/success_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <include
                    android:id="@+id/base_scout_cargoship_cargo_top_successes"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/base_scout_cargoship_cargo_icon"
                    android:src="@drawable/cargo"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/cargo" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include
                    android:id="@+id/base_scout_cargoship_cargo_side_attempts_square"
                    layout="@layout/attempt_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <include
                    android:id="@+id/base_scout_cargoship_cargo_side_attempts"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <include
                    android:id="@+id/base_scout_cargoship_cargo_side_successes_square"
                    layout="@layout/success_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <include
                    android:id="@+id/base_scout_cargoship_cargo_side_successes"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>

        <ImageView
            android:id="@+id/base_scout_cargoship_graphic"
            android:layout_width="140dp"
            android:layout_height="200dp"
            android:src="@drawable/red_cargoship"
            android:paddingStart="0dp"
            android:paddingEnd="5dp"
            android:contentDescription="@string/cargo_ship_thumbnail" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <include
                    android:id="@+id/base_scout_cargoship_hatch_front_attempts_square"
                    layout="@layout/attempt_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />
                <include
                    android:id="@+id/base_scout_cargoship_hatch_front_attempts"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <include
                    android:id="@+id/base_scout_cargoship_hatch_front_successes_square"
                    layout="@layout/success_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <include
                    android:id="@+id/base_scout_cargoship_hatch_front_successes"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/base_scout_cargoship_hatch_icon"
                    android:src="@drawable/hatch"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/hatch" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <include
                    android:id="@+id/base_scout_cargoship_hatch_side_attempts_square"
                    layout="@layout/attempt_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>
                <include
                    android:id="@+id/base_scout_cargoship_hatch_side_attempts"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <include
                    android:id="@+id/base_scout_cargoship_hatch_side_successes_square"
                    layout="@layout/success_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <include
                    android:id="@+id/base_scout_cargoship_hatch_side_successes"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>


    <!-- ROCKET -->
    <TextView
        android:id="@+id/base_scout_rocket_section_header"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/black"
        android:text="@string/rocket"
        android:textAlignment="center"
        android:textColor="@android:color/white"
        android:layout_marginTop="10dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="8dp">
                    <ImageView
                        android:id="@+id/base_scout_rocket_cargo_header"
                        android:src="@drawable/cargo"
                        android:layout_width="0dp"
                        android:layout_height="50dp"
                        android:layout_weight="1"
                        android:contentDescription="@string/cargo"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <include
                        android:id="@+id/base_scout_rocket_cargo_top_attempt_square"
                        layout="@layout/attempt_square"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>
                    <include
                        android:id="@+id/base_scout_rocket_cargo_top_attempt"
                        layout="@layout/stepper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <include
                        android:id="@+id/base_scout_rocket_cargo_top_success_square"
                        layout="@layout/success_square"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>
                    <include
                        android:id="@+id/base_scout_rocket_cargo_top_success"
                        layout="@layout/stepper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <include
                        android:id="@+id/base_scout_rocket_cargo_middle_attempt_square"
                        layout="@layout/attempt_square"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>

                    <include
                        android:id="@+id/base_scout_rocket_cargo_middle_attempt"
                        layout="@layout/stepper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="8dp">
                    <include
                        android:id="@+id/base_scout_rocket_cargo_middle_success_square"
                        layout="@layout/success_square"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>

                    <include
                        android:id="@+id/base_scout_rocket_cargo_middle_success"
                        layout="@layout/stepper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <include
                        android:id="@+id/base_scout_rocket_cargo_low_attempt_square"
                        layout="@layout/attempt_square"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>

                    <include
                        android:id="@+id/base_scout_rocket_cargo_low_attempt"
                        layout="@layout/stepper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>
                </LinearLayout>
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">
                    <include
                        android:id="@+id/base_scout_rocket_cargo_low_success_square"
                        layout="@layout/success_square"
                        android:layout_width="30dp"
                        android:layout_height="30dp"/>

                    <include
                        android:id="@+id/base_scout_rocket_cargo_low_success"
                        layout="@layout/stepper"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
        <ImageView
            android:id="@+id/base_scout_rocket_graphic"
            android:src="@drawable/red_rocket"
            android:layout_width="130dp"
            android:layout_height="300dp"
            android:layout_marginEnd="8dp"
            android:contentDescription="@string/rocket"/>
        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <ImageView
                    android:id="@+id/base_scout_rocket_hatch_header"
                    android:src="@drawable/hatch"
                    android:layout_width="0dp"
                    android:layout_height="50dp"
                    android:layout_weight="1"
                    android:contentDescription="@string/hatch"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <include
                    android:id="@+id/base_scout_rocket_hatch_top_attempt_square"
                    layout="@layout/attempt_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <include
                    android:id="@+id/base_scout_rocket_hatch_top_attempt"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <include
                    android:id="@+id/base_scout_rocket_hatch_top_success_square"
                    layout="@layout/success_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <include
                    android:id="@+id/base_scout_rocket_hatch_top_success"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <include
                    android:id="@+id/base_scout_rocket_hatch_middle_attempt_square"
                    layout="@layout/attempt_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <include
                    android:id="@+id/base_scout_rocket_hatch_middle_attempt"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="8dp">
                <include
                    android:id="@+id/base_scout_rocket_hatch_middle_success_square"
                    layout="@layout/success_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <include
                    android:id="@+id/base_scout_rocket_hatch_middle_success"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <include
                    android:id="@+id/base_scout_rocket_hatch_low_attempt_square"
                    layout="@layout/attempt_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp" />

                <include
                    android:id="@+id/base_scout_rocket_hatch_low_attempt"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content">
                <include
                    android:id="@+id/base_scout_rocket_hatch_low_success_square"
                    layout="@layout/success_square"
                    android:layout_width="30dp"
                    android:layout_height="30dp"/>

                <include
                    android:id="@+id/base_scout_rocket_hatch_low_success"
                    layout="@layout/stepper"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</LinearLayout>